--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,17 @@ RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^.*$ $0.html [L,QSA]
 RewriteCond %{THE_REQUEST} ([^\s]*)\.html(\?[^\s]*)?
 RewriteRule (.*) %1 [R=301,L]
+
+
+
+
+<IfModule mod_expires.c>  
+ExpiresActive On  
+ExpiresDefault "access plus 12 month"  
+
+ExpiresByType image/gif "access plus 12 months"  
+ExpiresByType image/jpg "access plus 12 months"  
+ExpiresByType image/jpeg "access plus 12 months"  
+ExpiresByType image/png "access plus 12 months"  
+ExpiresByType image/ico "access plus 12 months"  
+</IfModule>  
